# mtaawetu-base

./: .gitignore  docker-compose.yaml  pyproject.toml  pyvenv.cfg
backendMtaawetuApi/: Dockerfile  db.sqlite3  docker-compose.yml  manage.py  requirements.txt
backendMtaawetuApi/backendMtaawetuApi/: asgi.py  settings.py  urls.py  wsgi.py
backendMtaawetuApi/chatwebsockets/: apps.py  consumers.py  routing.py  utils.py
backendMtaawetuApi/client/: client.py
backendMtaawetuApi/coreApi/: admin.py  models.py  serializers.py  urls.py  views.py
backendMtaawetuApi/coreApi/migrations/: 0001_initial.py
backendMtaawetuApi/mapdatacontroler/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backendMtaawetuApi/mapdatacontroler/migrations/: 0001_initial.py  0002_timeserieslayer_category.py  0003_county_maplayer_county_timeserieslayer_county.py  0004_alter_timeserieslayer_options.py  0005_alter_timeserieslayer_options.py  0006_alter_timeserieslayer_options.py  0007_maplayer_description_timeserieslayer_description.py  0008_categorydescription_remove_maplayer_description_and_more.py  (+10 more)
backendMtaawetuApi/products/: geojson_data_20241107_083337.geojson  geojson_data_20241107_083520.geojson  geojson_data_20241107_083744.geojson  models.py  serializers.py  urls.py  views.py
tailwind-trial/: index.html  nginx.conf  package-lock.json  package.json  schools_kisii.geojson  tailwind.config.js
tailwind-trial/src/: App.tsx  Cta.tsx  CtaTop.tsx  Features.tsx  Footer.tsx  Header.tsx  Home.tsx  Message.tsx  Stats.tsx  Team.tsx  index.css  main.tsx
(+33 files in other folders)
